Bug 50386 - Page count field makes scrolling impossible
Summary: Page count field makes scrolling impossible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Muhammad Haggag
URL:
Whiteboard: target:3.7.0 target:3.6.0.0.beta1
Keywords:
: 50540 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-05-27 03:01 UTC by Ivan Timofeev (retired)
Modified: 2012-08-03 04:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Proposed patch. (1.55 KB, patch)
2012-06-04 11:33 UTC, Muhammad Haggag
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Timofeev (retired) 2012-05-27 03:01:55 UTC
Since the "word count in status bar" feature was implemented (see Bug 34772):

1. Open new Writer document.
2. Menu: Insert -> Fields -> Page Count
3. Scroll down, the cursor should become invisible.

Unexpected behavior: Writer brings the view back to the cursor.

Not reproducible with the other fields (at least with which I tested randomly...)
Comment 1 Muhammad Haggag 2012-05-28 07:40:46 UTC
I'm investigating. There seems to be two problems:

1. The "Page Count" field *seems* to be causing constant document updates, which leads to frequent execution of SwView::StateStatusLine to update the status bar (still trying to confirm)

2. The word count code apparently causes the view to scroll to the cursor/selection. This problem is hidden during typing since typing focuses the view on the cursor anyway.

Solving problem #2 alone would alleviate this.
Comment 2 Muhammad Haggag 2012-06-04 11:33:00 UTC
Created attachment 62532 [details]
Proposed patch.
Comment 3 Muhammad Haggag 2012-06-04 11:40:59 UTC
*** Bug 50540 has been marked as a duplicate of this bug. ***
Comment 5 Not Assigned 2012-06-05 10:41:10 UTC
Muhammad Haggag committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8080cad1089431a2d97903f73623eabe2eb23a7

fdo#50386 Page count field makes scrolling impossible
Comment 6 Not Assigned 2012-06-05 10:47:03 UTC
Muhammad Haggag committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59ea2faff4e938c77c71ec89bf9b6ea17a446cd1&g=libreoffice-3-6

fdo#50386 Page count field makes scrolling impossible


It will be available in LibreOffice 3.6.
Comment 7 Not Assigned 2012-06-05 11:14:31 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=265772797081d6d5b5cb94248a3a85d18487cd93&g=libreoffice-3-6

fdo#50386: SwView::StateStatusLine: remove SwWait:


It will be available in LibreOffice 3.6.
Comment 8 Not Assigned 2012-06-05 11:14:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=78b61b4d944db7f00093d7ee250d234694f1d5b5

fdo#50386: SwView::StateStatusLine: remove SwWait:
Comment 9 Michael Stahl 2012-06-05 11:29:23 UTC
fixed now, thanks for the patch