fdo#50386 Page count field makes scrolling impossible

(Also fixes fdo#50540 View area jumps when start drawing)

The word count code for the status bar was calling EndAction, which scrolls the view to focus on the cursor.
We were calling it directly (Start/EndAction) and indirectly (through SwWrtShell::GetUpdatedDocStat). I removed the
direct calls and replaced the SwWrtShell call with SwDoc::GetUpdatedDocStat, which doesn't call Start/EndAction.

Change-Id: I764e8c2d9c10f8eb685d36d0e26142cf3fee628c
(cherry picked from commit a8080cad1089431a2d97903f73623eabe2eb23a7)